components/operators/devspaces/instance/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devspaces
  annotations:
    openshift.io/description: |
      Get your Dev on here!
    openshift.io/display-name: Dev Spaces Infra
